<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="slogan">Netology. Changing careers through Education</string>
    <string name="postDate">21 may 2020</string>
    <string name="avatar">avatar</string>
    <string name="options">options</string>
    <string name="mainText" translatable="false"><![CDATA[Привет, это новая Нетология!

Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов.

Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb]]></string>
    <string name="bannerHeader" translatable="false">Новая Нетология: 4 уровня карьеры</string>
    <string name="bannerLink" translatable="false">netology.ru</string>
    <string name="views">views</string>
    <string name="fav">favorites</string>
    <string name="messages">messages</string>
    <string name="repost">repost</string>
    <string name="banner">banner</string>
    <string name="viewsCount" translatable="false">500</string>
    <string name="repostCount" translatable="false">50</string>
    <string name="favCount" translatable="false">125</string>
    <string name="chatCount" translatable="false">50</string>
</resources>