<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/avatar"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/slogan"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintEnd_toStartOf="@+id/options"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/postDate"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/authorName"
        app:layout_constraintStart_toStartOf="@id/authorName"
        app:layout_constraintTop_toBottomOf="@id/authorName" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/options"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/options"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,date,options"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mainTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autoLink="web"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:text="@string/mainText"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/headerBarrier" />

    <ImageView
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTextView"
        app:srcCompat="@drawable/banner" />

    <TextView
        android:id="@+id/bannerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bannerHeader"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/banner"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <TextView
        android:id="@+id/bannerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bannerLink"
        app:layout_constraintStart_toStartOf="@+id/bannerHeader"
        app:layout_constraintTop_toBottomOf="@+id/bannerHeader" />

    <ImageButton
        android:id="@+id/favButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/fav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainContentBarrier"
        app:srcCompat="@drawable/favorite_border_24" />

    <TextView
        android:id="@+id/favCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/favCount"
        app:layout_constraintBottom_toBottomOf="@+id/favButton"
        app:layout_constraintStart_toEndOf="@id/favButton"
        app:layout_constraintTop_toTopOf="@+id/favButton" />

    <ImageButton
        android:id="@+id/chatButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/messages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainContentBarrier"
        app:srcCompat="@drawable/chat_outline_24" />

    <TextView
        android:id="@+id/chatCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/chatCount"
        app:layout_constraintBottom_toBottomOf="@+id/chatButton"
        app:layout_constraintStart_toEndOf="@id/chatButton"
        app:layout_constraintTop_toTopOf="@+id/chatButton" />


    <ImageButton
        android:id="@+id/repostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/repost"
        android:rotationY="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainContentBarrier"
        app:srcCompat="@drawable/reply_24" />

    <TextView
        android:id="@+id/repostCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/repostCount"
        app:layout_constraintBottom_toBottomOf="@+id/repostButton"
        app:layout_constraintStart_toEndOf="@id/repostButton"
        app:layout_constraintTop_toTopOf="@+id/repostButton" />

    <ImageButton
        android:id="@+id/viewsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/views"
        app:layout_constraintEnd_toStartOf="@+id/viewsCount"
        app:layout_constraintTop_toBottomOf="@+id/mainContentBarrier"
        app:srcCompat="@drawable/eye_24" />

    <TextView
        android:id="@+id/viewsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/viewsCount"
        app:layout_constraintBottom_toBottomOf="@+id/viewsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewsButton" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/mainContentBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="bannerLink"
        />




</androidx.constraintlayout.widget.ConstraintLayout>